// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRandomBasicNemesisCardsByTier() should handle four players tier 1 1`] = `
Array [
  Object {
    "id": "minion3",
  },
  Object {
    "id": "minion1",
  },
  Object {
    "id": "attack3",
  },
  Object {
    "id": "power3",
  },
  Object {
    "id": "attack2",
  },
  Object {
    "id": "power1",
  },
  Object {
    "id": "power2",
  },
  Object {
    "id": "attack1",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle four players tier 2 1`] = `
Array [
  Object {
    "id": "minion6",
  },
  Object {
    "id": "minion4",
  },
  Object {
    "id": "attack6",
  },
  Object {
    "id": "power6",
  },
  Object {
    "id": "attack5",
  },
  Object {
    "id": "power4",
  },
  Object {
    "id": "power5",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle four players tier 3 1`] = `
Array [
  Object {
    "id": "minion9",
  },
  Object {
    "id": "minion7",
  },
  Object {
    "id": "attack9",
  },
  Object {
    "id": "power9",
  },
  Object {
    "id": "attack8",
  },
  Object {
    "id": "power7",
  },
  Object {
    "id": "power8",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle one player tier 1 1`] = `
Array [
  Object {
    "id": "minion3",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle one player tier 2 1`] = `
Array [
  Object {
    "id": "minion6",
  },
  Object {
    "id": "minion4",
  },
  Object {
    "id": "attack6",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle one player tier 3 1`] = `
Array [
  Object {
    "id": "minion9",
  },
  Object {
    "id": "minion7",
  },
  Object {
    "id": "attack9",
  },
  Object {
    "id": "power9",
  },
  Object {
    "id": "attack8",
  },
  Object {
    "id": "power7",
  },
  Object {
    "id": "power8",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle three players tier 1 1`] = `
Array [
  Object {
    "id": "minion3",
  },
  Object {
    "id": "minion1",
  },
  Object {
    "id": "attack3",
  },
  Object {
    "id": "power3",
  },
  Object {
    "id": "attack2",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle three players tier 2 1`] = `
Array [
  Object {
    "id": "minion6",
  },
  Object {
    "id": "minion4",
  },
  Object {
    "id": "attack6",
  },
  Object {
    "id": "power6",
  },
  Object {
    "id": "attack5",
  },
  Object {
    "id": "power4",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle three players tier 3 1`] = `
Array [
  Object {
    "id": "minion9",
  },
  Object {
    "id": "minion7",
  },
  Object {
    "id": "attack9",
  },
  Object {
    "id": "power9",
  },
  Object {
    "id": "attack8",
  },
  Object {
    "id": "power7",
  },
  Object {
    "id": "power8",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle two players tier 1 1`] = `
Array [
  Object {
    "id": "minion3",
  },
  Object {
    "id": "minion1",
  },
  Object {
    "id": "attack3",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle two players tier 2 1`] = `
Array [
  Object {
    "id": "minion6",
  },
  Object {
    "id": "minion4",
  },
  Object {
    "id": "attack6",
  },
  Object {
    "id": "power6",
  },
  Object {
    "id": "attack5",
  },
]
`;

exports[`getRandomBasicNemesisCardsByTier() should handle two players tier 3 1`] = `
Array [
  Object {
    "id": "minion9",
  },
  Object {
    "id": "minion7",
  },
  Object {
    "id": "attack9",
  },
  Object {
    "id": "power9",
  },
  Object {
    "id": "attack8",
  },
  Object {
    "id": "power7",
  },
  Object {
    "id": "power8",
  },
]
`;
